--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:mysql://localhost:3306/pinta_partido
+spring.datasource.username=root
+spring.datasource.password=yoel1234
+spring.jpa.hibernate.ddl-auto=update
